# Practice-2023

./: README.md
Project/: Практика_2023.Презентация.pptx  Таблица приоритетов.xlsx  временная диаграмма.txt
Project/main/: data.csv  main.py  sofia_main.py  преза.pptx
Project/python_gui/: main.py
Project/skeleton_recognition/: skeleton_recognition.py
Project/transmission/: transmission_msg.py  transmission_video.py
Project/для Алины, чтобы помучилась тоже с этим/: interface.py  skeleton_recogntion_v3.py
ioctl/app/: app1  app1.c
ioctl/app/driver/: Makefile  modules.order  my_ioctl.c  my_ioctl.h  my_ioctl.ko  my_ioctl.mod  my_ioctl.mod.c
kernel/: Makefile  example.c  example.ko  example.mod  example.mod.c  modules.order
kernel/user/: Makefile  app1  app1.c
kernel/user/app2/: app2  app2.c
pci/: Makefile  modules.order  pci.c  pci.ko  pci.mod  pci.mod.c
socket/: CMakeLists.txt  MyService.service  client.c  server.c
socket/server/: CMakeLists.txt  server.c
